--- a/notes.ipynb
+++ b/notes.ipynb
@@ -2,34 +2,106 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "74b049c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import re\n",
+    "\n",
+    "data = \"\"\"\n",
+    "=== TOURNÉES 2026-02-16 00:00:00 ===\n",
+    "Camion 0: D -> V14023 -> P15120 -> V16027 -> P15028 -> V16112 -> P7015 -> V15114 -> P6025 -> V14027 -> P6031 -> V14012 -> P5034 -> V14113 -> P6015 -> V14005 -> P4019 -> V20202 -> D\n",
+    "Camion 1: D -> V18032 -> P21107 -> V17017 -> P23009 -> V17027 -> P23011 -> V17022 -> P23003 -> V17125 -> P24007 -> V17005 -> P17127 -> V18046 -> P8016 -> V9005 -> P10005 -> V18023 -> D\n",
+    "Camion 2: D -> V20104 -> D\n",
+    "Camion 3: D -> V31016 -> P41304 -> V41202 -> P12165 -> V20004 -> P12008 -> V20007 -> P11101 -> V20039 -> P1102 -> V19039 -> P10014 -> V20113 -> P4015 -> V11017 -> P4101 -> V31708 -> D\n",
+    "Camion 4: D -> V48005 -> P43101 -> V40014 -> D\n",
+    "\n",
+    "\n",
+    "=== TOURNÉES 2026-02-17 00:00:00 ===\n",
+    "Camion 0: D -> V14020 -> P1001 -> V20007 -> P11048 -> V20044 -> P6014 -> V14133 -> P5034 -> V42707 -> P13118 -> V42027 -> P13121 -> V47005 -> P12165 -> V12163 -> P12164 -> V43403 -> D\n",
+    "Camion 1: D -> V14026 -> P5027 -> V13017 -> P4006 -> V12107 -> P12002 -> V20131 -> P11002 -> V20110 -> P4010 -> V20039 -> P2001 -> V20104 -> P1006 -> V12017 -> P12204 -> V20204 -> P12005 -> V20047 -> P2003 -> D\n",
+    "Camion 2: D -> V19024 -> P6021 -> V14122 -> P15022 -> V15014 -> P15031 -> V21207 -> P6026 -> V14030 -> P15103 -> V15044 -> P21027 -> V21017 -> P21032 -> V23105 -> P23101 -> V21953 -> P21029 -> V21328 -> D\n",
+    "Camion 3: D -> V20205 -> P4003 -> V19046 -> P32001 -> V18139 -> P2101 -> V10026 -> P10005 -> V9005 -> P9022 -> V18134 -> P34011 -> V18026 -> P17127 -> V18046 -> P7016 -> V20035 -> P1201 -> V31705 -> D\n",
+    "Camion 4: D -> V32605 -> P11004 -> V20119 -> P1120 -> V5110 -> P5123 -> V13010 -> P5116 -> V21213 -> P1017 -> V8012 -> P8017 -> V17122 -> P17028 -> V17204 -> P21107 -> V18016 -> P9101 -> V18006 -> P22019 -> D\n",
+    "\n",
+    "\n",
+    "=== TOURNÉES 2026-02-18 00:00:00 ===\n",
+    "Camion 0: D -> V19038 -> P1017 -> V8012 -> P32018 -> V18029 -> P1015 -> V9017 -> P1013 -> V10162 -> P5019 -> V20021 -> P12204 -> V20014 -> P11004 -> V12016 -> P8029 -> V14136 -> P7013 -> V14128 -> P15022 -> D\n",
+    "Camion 1: D -> V20136 -> P3001 -> V20032 -> P3002 -> V20013 -> P12008 -> V20112 -> P11037 -> V18142 -> P10105 -> V18023 -> P1116 -> V9027 -> P8017 -> V17004 -> P5115 -> V14139 -> P15062 -> V23702 -> P23101 -> D\n",
+    "Camion 2: D -> V21209 -> P15031 -> V20004 -> P12106 -> V12036 -> P12031 -> V12111 -> P13121 -> V12113 -> P13118 -> V42027 -> P13047 -> V14021 -> P5121 -> V14113 -> P5123 -> V18015 -> P11001 -> D\n",
+    "Camion 3: D -> P6025 -> V14036 -> P7101 -> V13017 -> P5116 -> V20047 -> P2101 -> V19105 -> P4019 -> V20024 -> P12005 -> V20020 -> P2017 -> V31022 -> P12125 -> V43006 -> P4006 -> V31009 -> P31103 -> V32306 -> D\n",
+    "Camion 4: D -> P21001 -> V16129 -> P22016 -> V16018 -> P16025 -> V22604 -> P21314 -> V21326 -> P15070 -> V21205 -> P6015 -> V22401 -> P21006 -> V25010 -> P21511 -> V51001 -> P22304 -> V51005 -> P26010 -> V17005 -> D\n",
+    "\n",
+    "=== TOURNÉES 2026-02-19 00:00:00 ===\n",
+    "Camion 0: D -> V8020 -> P7005 -> V13515 -> P21308 -> V16129 -> P16030 -> V16020 -> P15060 -> V21209 -> P21310 -> V16002 -> P8046 -> V17021 -> P23009 -> V17048 -> P8031 -> V17122 -> P1026 -> V10033 -> P7101 -> D\n",
+    "Camion 1: D -> V14110 -> P7006 -> V15044 -> P2016 -> V14030 -> P12001 -> V13032 -> P13015 -> V43403 -> P44101 -> V12163 -> P44001 -> V47005 -> P42004 -> V42205 -> P42014 -> V13041 -> P6031 -> V21702 -> P6003 -> D\n",
+    "Camion 2: D -> V18016 -> P9022 -> V33006 -> P32023 -> V32022 -> P23903 -> V18029 -> P9102 -> V17050 -> P7024 -> V18206 -> P18138 -> V18023 -> P26010 -> V18141 -> P9101 -> V9007 -> P9015 -> V18139 -> D\n",
+    "Camion 3: D -> V20008 -> P8013 -> V20001 -> P12161 -> V12115 -> P12153 -> V12111 -> P3006 -> V10164 -> P6014 -> V18142 -> P3008 -> V11035 -> P2002 -> V31013 -> P1201 -> V18113 -> P9014 -> V19130 -> D\n",
+    "Camion 4: D -> P6032 -> V14003 -> P15129 -> V14008 -> P15008 -> V15011 -> P15106 -> V16031 -> P15072 -> V21215 -> P21323 -> V21952 -> P21029 -> V23105 -> P21027 -> V21326 -> P6013 -> V18112 -> P34012 -> V17003 -> D\n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d45983ed",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0 0]\n",
-      " [0 0 0 1]\n",
-      " [0 0 1 0]\n",
-      " [0 0 1 1]\n",
-      " [0 1 0 0]]\n"
+      "Fichier corrigé avec succès ! \n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
     "\n",
-    "def int_to_binary_matrix(indices, n_bits):\n",
-    "    # La magie : on déplace les bits et on utilise l'opérateur AND (&)\n",
-    "    return (indices[:, None] & (1 << np.arange(n_bits)[::-1]) > 0).astype(int)\n",
     "\n",
-    "# Exemple : transformer [0, 1, 2, 3, 4] en 4 bits\n",
-    "indices = np.array([0, 1, 2, 3, 4])\n",
-    "matrix = int_to_binary_matrix(indices, 4)\n",
+    "output = []\n",
+    "current_date = \"\"\n",
     "\n",
-    "print(matrix)"
+    "lines = data.strip().split('\\n')\n",
+    "\n",
+    "for line in lines:\n",
+    "    line = line.strip()\n",
+    "    if not line: continue\n",
+    "\n",
+    "    # 1. Extraction de la date (nettoyée)\n",
+    "    if line.startswith(\"===\"):\n",
+    "        match = re.search(r\"TOURNÉES\\s+(.*?)\\s+===\", line)\n",
+    "        if match:\n",
+    "            current_date = match.group(1)\n",
+    "        continue\n",
+    "    \n",
+    "    # 2. Extraction et nettoyage des stations\n",
+    "    if line.startswith(\"Camion\"):\n",
+    "        stations_part = line.split(\":\", 1)[1]\n",
+    "        stations = [s.strip() for s in stations_part.split(\"->\")]\n",
+    "        \n",
+    "        for s in stations:\n",
+    "            # On ignore le dépôt et les chaînes vides\n",
+    "            if s == \"D\" or not s:\n",
+    "                continue\n",
+    "            \n",
+    "            # Détermination du signe AVANT de supprimer la lettre\n",
+    "            reg = \"+15\" if s.upper().startswith(\"V\") else \"-15\"\n",
+    "            \n",
+    "            # On ne garde que les chiffres (on enlève le premier caractère)\n",
+    "            station_id = s[1:] \n",
+    "            \n",
+    "            if station_id: # On vérifie qu'il reste bien quelque chose\n",
+    "                output.append([current_date, station_id, reg])\n",
+    "\n",
+    "# 3. Écriture du CSV\n",
+    "with open(\"regulation_tournees.csv\", \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerow([\"Date\", \"Station\", \"Regulation\"])\n",
+    "    writer.writerows(output)\n",
+    "\n",
+    "print(\"Fichier corrigé avec succès ! \")"
    ]
   }
  ],
